# our-chat-actix

./: Cargo.toml  docker-compose.yml
.envs/.local/: .rust
config/reverse-proxy/: user.conf
containers/api/: Dockerfile  start
containers/nginx/: Dockerfile  development.yml  nginx.conf  production.yml
migrations/2021-12-04-190338_create_chat_tables/: down.sql  up.sql
src/: chat_server.rs  config.rs  handlers.rs  lib.rs  main.rs  schema.rs  utils.rs  ws_chat_session.rs
src/models/: messages.rs  mod.rs  rooms.rs  subscribes.rs  users.rs
volumes/mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
volumes/mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
volumes/mysql/mysql/: general_log_213.sdi  slow_log_214.sdi
volumes/mysql/our@002dchat/: __diesel_schema_migrations.ibd  messages.ibd  rooms.ibd  subscribes.ibd  users.ibd
volumes/mysql/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  (+92 more)
(+1 files in other folders)
